logs/turtlesim/build.make.155.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:234:3: error: expected unqualified-id before ‘return’
   return modified;
   ^~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:237:6: error: ‘Turtle’ has not been declared
 void Turtle::paint(QPainter& painter)
      ^~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In function ‘void paint(QPainter&)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:240:15: error: ‘pos_’ was not declared in this scope
   QPointF p = pos_;
               ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:240:15: note: suggested alternative: ‘powq’
   QPointF p = pos_;
               ^~~~
               powq
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:241:19: error: ‘turtle_rotated_image_’ was not declared in this scope
   p.rx() -= 0.5 * turtle_rotated_image_.width();
                   ^~~~~~~~~~~~~~~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:245:27: error: ‘wayx’ was not declared in this scope
   painter.drawEllipse(int(wayx),int(wayy), 100, 100);
                           ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:245:37: error: ‘wayy’ was not declared in this scope
   painter.drawEllipse(int(wayx),int(wayy), 100, 100);
                                     ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:254:32: error: ‘a’ was not declared in this scope
   QRect rectangle2 = QRect(int(a), int(b), 400, 400);
                                ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:254:40: error: ‘b’ was not declared in this scope
   QRect rectangle2 = QRect(int(a), int(b), 400, 400);
                                        ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: At global scope:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:267:1: error: expected declaration before ‘}’ token
 }
 ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp: In member function ‘virtual void turtlesim::TurtleFrame::paintEvent(QPaintEvent*)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp:222:16: error: ‘painter2’ was not declared in this scope
   QFont font = painter2.font();
                ^~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp:222:16: note: suggested alternative: ‘painters’
   QFont font = painter2.font();
                ^~~~~~~~
                painters
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle_frame.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
